# concept-lang

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  marketplace.json
architecture-ide/: .mcp.json  pyproject.toml
architecture-ide/.claude/: settings.local.json
architecture-ide/.concepts/concepts/: DesignSession.concept
architecture-ide/.concepts/syncs/: workspace_tracks_concept.sync
architecture-ide/concepts/: Concept.concept  Diagram.concept  architecture_ide.app  concept.concept  design_session.concept  diagram.concept  workspace.concept
architecture-ide/src/concept_lang/: __init__.py  app_parser.py  app_validator.py  ast.py  diff.py  explorer.py  loader.py  models.py  parse.py  parser.py  prompts.py  resources.py  server.py  validator.py
architecture-ide/src/concept_lang/codegen/: __init__.py  base.py  go.py  python.py  registry.py  typescript.py
architecture-ide/src/concept_lang/diagrams/: __init__.py  concept_graph.py  entity_diagram.py  state_machine.py
architecture-ide/src/concept_lang/grammars/: __init__.py  concept.lark  sync.lark
architecture-ide/src/concept_lang/tools/: __init__.py  _io.py  app_tools.py  codegen_tools.py  concept_tools.py  diagram_tools.py  (+5 more)
architecture-ide/syncs/: session_introduces.sync
architecture-ide/tests/: __init__.py  test_ast.py  test_diagrams.py  test_diff.py  test_docs.py  test_explorer.py  test_loader.py  test_mcp_protocol.py  test_mcp_tools.py  test_parse.py  test_prompts_content.py  test_runtime_dogfood.py  test_scaffold_methodology.py  test_skills.py  test_validate.py  test_validator.py
(+74 files in other folders)
