[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concept-lang"
version = "0.1.0"
description = "MCP plugin for Daniel Jackson-style concept specs with diagram generation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
]

[project.scripts]
concept-lang = "concept_lang.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/concept_lang"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
